# cc_os

./: Cargo.toml  Readme.md  Readme.org  mise.toml
.cargo/: config.toml
.zed/: tasks.json
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
