[package]
name = "cc_os"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic="abort"

[profile.release]
panic="abort"


[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version="1.0"
features=["spin_no_std"]

[[bin]]
name="cc_os"
test=true
bench=false
